Setting up theme and basic login directs to secure

--- a/public_html/app/themes/comber-wedding/scss/_site_settings.scss
+++ b/public_html/app/themes/comber-wedding/scss/_site_settings.scss
@@ -92,6 +92,8 @@ $rem-base: 16px;
 //$font-family-sans-serif: 'Open Sans', "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 // $font-family-serif: Georgia, Cambria, "Times New Roman", Times, serif;
 // $font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
+$pacifico: 'Pacifico', cursive;
+$badscript: 'Bad Script', cursive;
 
 // We use these to define default font weights
 // $font-weight-normal: normal;
@@ -128,7 +130,7 @@ $rem-base: 16px;
 // We use these to control various global styles
 // $body-bg: $white;
 // $body-font-color: $jet;
-// $body-font-family: $font-family-sans-serif;
+$body-font-family: $badscript;
 // $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
 
@@ -198,7 +200,7 @@ $rem-base: 16px;
 // $include-html-type-classes: $include-html-classes;
 
 // We use these to control header font styles
-// $header-font-family: $body-font-family;
+$header-font-family: $pacifico;
 //$header-font-weight: 600;
 //$header-font-style: normal;
 //$header-font-color: $jet;
