Setting up main navigation

--- a/public_html/app/themes/comber-wedding/scss/_site_settings.scss
+++ b/public_html/app/themes/comber-wedding/scss/_site_settings.scss
@@ -120,7 +120,7 @@ $badscript: 'Bad Script', cursive;
 // $black       : #000000;
 
 // We use these as default colors throughout
-//$primary-color: #339966;
+$primary-color: #303f76;
 // $secondary-color: #e7e7e7;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
