--- a/public_html/app/themes/comber-wedding/css/main.css
+++ b/public_html/app/themes/comber-wedding/css/main.css
@@ -1257,8 +1257,8 @@ select {
   padding: 0.875rem 1.5rem 0.875rem 0.875rem;
   font-size: 0.8125rem;
   transition: opacity 300ms ease-out;
-  background-color: #008CBA;
-  border-color: #0078a0;
+  background-color: #303f76;
+  border-color: #293665;
   color: #FFFFFF; }
   .alert-box .close {
     font-size: 1.375rem;
@@ -1590,11 +1590,11 @@ select {
     font-size: 0.6875rem;
     line-height: 0.6875rem;
     text-transform: uppercase;
-    color: #008CBA; }
+    color: #303f76; }
     .breadcrumbs > *:hover a, .breadcrumbs > *:focus a {
       text-decoration: underline; }
     .breadcrumbs > * a {
-      color: #008CBA; }
+      color: #303f76; }
     .breadcrumbs > *.current {
       cursor: default;
       color: #333333; }
@@ -1645,12 +1645,12 @@ button, .button {
   padding-bottom: 1.0625rem;
   padding-left: 2rem;
   font-size: 1rem;
-  background-color: #008CBA;
-  border-color: #007095;
+  background-color: #303f76;
+  border-color: #26325e;
   color: #FFFFFF;
   transition: background-color 300ms ease-out; }
   button:hover, button:focus, .button:hover, .button:focus {
-    background-color: #007095; }
+    background-color: #26325e; }
   button:hover, button:focus, .button:hover, .button:focus {
     color: #FFFFFF; }
   button.secondary, .button.secondary {
@@ -1726,18 +1726,18 @@ button, .button {
   button.round, .button.round {
     border-radius: 1000px; }
   button.disabled, button[disabled], .button.disabled, .button[disabled] {
-    background-color: #008CBA;
-    border-color: #007095;
+    background-color: #303f76;
+    border-color: #26325e;
     color: #FFFFFF;
     cursor: default;
     opacity: 0.7;
     box-shadow: none; }
     button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
-      background-color: #007095; }
+      background-color: #26325e; }
     button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
       color: #FFFFFF; }
     button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
-      background-color: #008CBA; }
+      background-color: #303f76; }
     button.disabled.secondary, button[disabled].secondary, .button.disabled.secondary, .button[disabled].secondary {
       background-color: #e7e7e7;
       border-color: #b9b9b9;
@@ -3041,13 +3041,13 @@ label.error {
   .icon-bar > * i {
     color: #FFFFFF; }
   .icon-bar > a:hover {
-    background: #008CBA; }
+    background: #303f76; }
     .icon-bar > a:hover label {
       color: #FFFFFF; }
     .icon-bar > a:hover i {
       color: #FFFFFF; }
   .icon-bar > a.active {
-    background: #008CBA; }
+    background: #303f76; }
     .icon-bar > a.active label {
       color: #FFFFFF; }
     .icon-bar > a.active i {
@@ -3320,7 +3320,7 @@ label.error {
   margin-bottom: auto;
   padding: 0.25rem 0.5rem 0.25rem;
   font-size: 0.6875rem;
-  background-color: #008CBA;
+  background-color: #303f76;
   color: #FFFFFF; }
   .label.radius {
     border-radius: 3px; }
@@ -3614,12 +3614,12 @@ ul.pagination {
     ul.pagination li.unavailable:hover a, ul.pagination li.unavailable a:focus, ul.pagination li.unavailable:hover button, ul.pagination li.unavailable button:focus {
       background: transparent; }
     ul.pagination li.current a, ul.pagination li.current button {
-      background: #008CBA;
+      background: #303f76;
       color: #FFFFFF;
       font-weight: bold;
       cursor: default; }
       ul.pagination li.current a:hover, ul.pagination li.current a:focus, ul.pagination li.current button:hover, ul.pagination li.current button:focus {
-        background: #008CBA; }
+        background: #303f76; }
   ul.pagination li {
     float: left;
     display: block; }
@@ -3654,10 +3654,10 @@ ul.pagination {
   .panel.callout {
     border-style: solid;
     border-width: 1px;
-    border-color: #b6edff;
+    border-color: #cad1e9;
     margin-bottom: 1.25rem;
     padding: 1.25rem;
-    background: #ecfaff;
+    background: #f0f2f9;
     color: #333333; }
     .panel.callout > :first-child {
       margin-top: 0; }
@@ -3671,9 +3671,9 @@ ul.pagination {
       .panel.callout h1.subheader, .panel.callout h2.subheader, .panel.callout h3.subheader, .panel.callout h4.subheader, .panel.callout h5.subheader, .panel.callout h6.subheader {
         line-height: 1.4; }
     .panel.callout a:not(.button) {
-      color: #008CBA; }
+      color: #303f76; }
       .panel.callout a:not(.button):hover, .panel.callout a:not(.button):focus {
-        color: #0078a0; }
+        color: #293665; }
   .panel.radius {
     border-radius: 3px; }
 
@@ -3731,7 +3731,7 @@ ul.pagination {
   padding: 0.125rem;
   margin-bottom: 0.625rem; }
   .progress .meter {
-    background: #008CBA;
+    background: #303f76;
     height: 100%;
     display: block; }
   .progress.secondary .meter {
@@ -3787,28 +3787,28 @@ ul.pagination {
     background: #FAFAFA;
     border-radius: 3px; }
     .range-slider.radius .range-slider-handle {
-      background: #008CBA;
+      background: #303f76;
       border-radius: 3px; }
       .range-slider.radius .range-slider-handle:hover {
-        background: #007ba4; }
+        background: #2a3768; }
   .range-slider.round {
     background: #FAFAFA;
     border-radius: 1000px; }
     .range-slider.round .range-slider-handle {
-      background: #008CBA;
+      background: #303f76;
       border-radius: 1000px; }
       .range-slider.round .range-slider-handle:hover {
-        background: #007ba4; }
+        background: #2a3768; }
   .range-slider.disabled, .range-slider[disabled] {
     background: #FAFAFA;
     cursor: false;
     opacity: 0.7; }
     .range-slider.disabled .range-slider-handle, .range-slider[disabled] .range-slider-handle {
-      background: #008CBA;
+      background: #303f76;
       cursor: default;
       opacity: 0.7; }
       .range-slider.disabled .range-slider-handle:hover, .range-slider[disabled] .range-slider-handle:hover {
-        background: #007ba4; }
+        background: #2a3768; }
 
 .range-slider-active-segment {
   display: inline-block;
@@ -3827,9 +3827,9 @@ ul.pagination {
   cursor: pointer;
   -ms-touch-action: manipulation;
   touch-action: manipulation;
-  background: #008CBA; }
+  background: #303f76; }
   .range-slider-handle:hover {
-    background: #007ba4; }
+    background: #2a3768; }
 
 .reveal-modal-bg {
   position: fixed;
@@ -3956,14 +3956,14 @@ ul.pagination {
     font-weight: normal; }
     .side-nav li a:not(.button) {
       display: block;
-      color: #008CBA;
+      color: #303f76;
       margin: 0;
       padding: 0.4375rem 0.875rem; }
       .side-nav li a:not(.button):hover, .side-nav li a:not(.button):focus {
         background: rgba(0, 0, 0, 0.025);
-        color: #1cc7ff; }
+        color: #546ab9; }
     .side-nav li.active > a:first-child:not(.button) {
-      color: #1cc7ff;
+      color: #546ab9;
       font-weight: normal;
       font-family: 'Bad Script', cursive; }
     .side-nav li.divider {
@@ -3973,7 +3973,7 @@ ul.pagination {
       list-style: none;
       border-top-color: white; }
     .side-nav li.heading {
-      color: #008CBA;
+      color: #303f76;
       font-size: 0.875rem;
       font-weight: bold;
       text-transform: uppercase; }
@@ -4096,12 +4096,12 @@ ul.pagination {
     .sub-nav dt.active a, .sub-nav dd.active a, .sub-nav li.active a {
       border-radius: 3px;
       font-weight: normal;
-      background: #008CBA;
+      background: #303f76;
       padding: 0.1875rem 1rem;
       cursor: default;
       color: #FFFFFF; }
       .sub-nav dt.active a:hover, .sub-nav dd.active a:hover, .sub-nav li.active a:hover {
-        background: #0078a0; }
+        background: #293665; }
 
 .switch {
   padding: 0;
@@ -4149,7 +4149,7 @@ ul.pagination {
     -o-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0); }
   .switch input:checked + label {
-    background: #008CBA; }
+    background: #303f76; }
   .switch input:checked + label:after {
     left: 2.25rem; }
   .switch label {
@@ -4166,7 +4166,7 @@ ul.pagination {
   .switch label:after {
     background: #FFFFFF; }
   .switch input:checked + label {
-    background: #008CBA; }
+    background: #303f76; }
   .switch.large label {
     width: 5rem;
     height: 2.5rem; }
@@ -4329,7 +4329,7 @@ table {
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);
   transition: all 200ms ease-out; }
   .th:hover, .th:focus {
-    box-shadow: 0 0 6px 1px rgba(0, 140, 186, 0.5); }
+    box-shadow: 0 0 6px 1px rgba(48, 63, 118, 0.5); }
   .th.radius {
     border-radius: 3px; }
 
@@ -4340,8 +4340,8 @@ table {
   font-weight: bold;
   color: #333333; }
   .has-tip:hover, .has-tip:focus {
-    border-bottom: dotted 1px #003f54;
-    color: #008CBA; }
+    border-bottom: dotted 1px #161c35;
+    color: #303f76; }
   .has-tip.tip-left, .has-tip.tip-right {
     float: none !important; }
 
@@ -4378,8 +4378,8 @@ table {
     .tooltip.round > .nub {
       left: 2rem; }
   .tooltip.opened {
-    color: #008CBA !important;
-    border-bottom: dotted 1px #003f54 !important; }
+    color: #303f76 !important;
+    border-bottom: dotted 1px #161c35 !important; }
 
 .tap-to-close {
   display: block;
@@ -4563,11 +4563,11 @@ meta.foundation-mq-topbar {
         font-size: 0.8125rem;
         padding-right: 0.9375rem;
         padding-left: 0.9375rem;
-        background-color: #008CBA;
-        border-color: #007095;
+        background-color: #303f76;
+        border-color: #26325e;
         color: #FFFFFF; }
         .top-bar-section ul li > a.button:hover, .top-bar-section ul li > a.button:focus {
-          background-color: #007095; }
+          background-color: #26325e; }
         .top-bar-section ul li > a.button:hover, .top-bar-section ul li > a.button:focus {
           color: #FFFFFF; }
       .top-bar-section ul li > a.button.secondary {
@@ -4606,11 +4606,11 @@ meta.foundation-mq-topbar {
       font-size: 0.8125rem;
       padding-right: 0.9375rem;
       padding-left: 0.9375rem;
-      background-color: #008CBA;
-      border-color: #007095;
+      background-color: #303f76;
+      border-color: #26325e;
       color: #FFFFFF; }
       .top-bar-section ul li > button:hover, .top-bar-section ul li > button:focus {
-        background-color: #007095; }
+        background-color: #26325e; }
       .top-bar-section ul li > button:hover, .top-bar-section ul li > button:focus {
         color: #FFFFFF; }
       .top-bar-section ul li > button.secondary {
@@ -4650,10 +4650,10 @@ meta.foundation-mq-topbar {
       background: #333333;
       color: #FFFFFF; }
     .top-bar-section ul li.active > a {
-      background: #008CBA;
+      background: #303f76;
       color: #FFFFFF; }
       .top-bar-section ul li.active > a:hover {
-        background: #0078a0;
+        background: #293665;
         color: #FFFFFF; }
   .top-bar-section .has-form {
     padding: 0.9375rem; }
@@ -4781,9 +4781,9 @@ meta.foundation-mq-topbar {
       padding: 0 0.9375rem;
       line-height: 2.8125rem;
       color: #FFFFFF;
-      background: #008CBA; }
+      background: #303f76; }
       .top-bar-section li.active:not(.has-form) a:not(.button):hover {
-        background: #0078a0;
+        background: #293665;
         color: #FFFFFF; }
     .top-bar-section .has-dropdown > a {
       padding-right: 2.1875rem !important; }
@@ -4879,7 +4879,7 @@ meta.foundation-mq-topbar {
     background: #333333;
     color: #FFFFFF; }
   .no-js .top-bar-section ul li:active > a {
-    background: #008CBA;
+    background: #303f76;
     color: #FFFFFF; }
   .no-js .top-bar-section .has-dropdown:hover > .dropdown {
     display: block;
@@ -5017,11 +5017,11 @@ div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, p, blockquote, t
 
 /* Default Link Styles */
 a {
-  color: #008CBA;
+  color: #303f76;
   text-decoration: none;
   line-height: inherit; }
   a:hover, a:focus {
-    color: #0078a0; }
+    color: #293665; }
   a img {
     border: none; }
 
@@ -6856,7 +6856,9 @@ th.hide-for-touch {
   content: "\f21a"; }
 
 body {
-  font-size: 18px; }
+  font-size: 18px;
+  background: url(../images/background.jpg) no-repeat center top;
+  background-size: cover; }
   body p {
     font-size: 18px; }
 
@@ -6899,12 +6901,56 @@ img.alignleft {
   margin: 8px auto 0;
   margin-right: 15px; }
 
-.panel::after {
-  clear: both;
-  width: 100%;
-  clear: both;
-  display: block;
-  content: ''; }
+.panel {
+  background: rgba(255, 255, 255, 0.95);
+  border: 1px solid #fff;
+  -webkit-box-shadow: 4px 4px 14px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 4px 4px 14px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: 4px 4px 14px -1px rgba(0, 0, 0, 0.75); }
+  .panel::after {
+    clear: both;
+    width: 100%;
+    clear: both;
+    display: block;
+    content: ''; }
 
 ul.accordion {
   margin-left: 0; }
+
+ul.main-navigation {
+  list-style: none;
+  margin: 0 0 0 40px; }
+  ul.main-navigation li a {
+    display: block;
+    padding: 6px 0 0 55px;
+    line-height: 34px;
+    background-size: 30px;
+    background-position: left center;
+    background-repeat: no-repeat;
+    font-size: 18px;
+    transition: all .3s linear;
+    margin-bottom: 10px; }
+  ul.main-navigation li.menu-item-32 a {
+    background-image: url(../images/gallery.png); }
+  ul.main-navigation li.menu-item-32:hover a, ul.main-navigation li.menu-item-32.current-menu-item a {
+    background-image: url(../images/gallery-hov.png); }
+  ul.main-navigation li.menu-item-24 a {
+    background-image: url(../images/gift.png); }
+  ul.main-navigation li.menu-item-24:hover a, ul.main-navigation li.menu-item-24.current-menu-item a {
+    background-image: url(../images/gift-hov.png); }
+  ul.main-navigation li.menu-item-23 a {
+    background-image: url(../images/music.png); }
+  ul.main-navigation li.menu-item-23:hover a, ul.main-navigation li.menu-item-23.current-menu-item a {
+    background-image: url(../images/music-hov.png); }
+  ul.main-navigation li.menu-item-25 a {
+    background-image: url(../images/rsvp.png); }
+  ul.main-navigation li.menu-item-25:hover a, ul.main-navigation li.menu-item-25.current-menu-item a {
+    background-image: url(../images/rsvp-hov.png); }
+  ul.main-navigation li.menu-item-13 a {
+    background-image: url(../images/accom.png); }
+  ul.main-navigation li.menu-item-13:hover a, ul.main-navigation li.menu-item-13.current-menu-item a {
+    background-image: url(../images/accom-hov.png); }
+  ul.main-navigation li.menu-item-14 a {
+    background-image: url(../images/home.png); }
+  ul.main-navigation li.menu-item-14:hover a, ul.main-navigation li.menu-item-14.current-menu-item a {
+    background-image: url(../images/home-hov.png); }
