--- a/public_html/app/themes/comber-wedding/scss/main.scss
+++ b/public_html/app/themes/comber-wedding/scss/main.scss
@@ -11,6 +11,7 @@ body {
 	font-size: 18px;
 	background: url(../images/background.jpg) no-repeat center top;
 	background-size: cover;
+	background-attachment: fixed;
 	p {
 		font-size: 18px;
 	}
