--- a/public_html/app/themes/comber-wedding/css/main.css
+++ b/public_html/app/themes/comber-wedding/css/main.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Bad+Script|Pacifico);
+@import url(https://fonts.googleapis.com/css?family=Pompiere|Lobster+Two:400,400italic,700);
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 /**
  * 1. Set default font family to sans-serif.
@@ -379,7 +379,7 @@ body {
   color: #222;
   padding: 0;
   margin: 0;
-  font-family: 'Bad Script', cursive;
+  font-family: 'Pompiere', cursive;
   font-weight: normal;
   font-style: normal;
   line-height: 1.5;
@@ -1236,7 +1236,7 @@ select {
       color: #222222;
       padding: 1rem;
       display: block;
-      font-family: 'Bad Script', cursive;
+      font-family: 'Pompiere', cursive;
       font-size: 1rem; }
       .accordion .accordion-navigation > a:hover, .accordion dd > a:hover {
         background: #e3e3e3; }
@@ -1629,7 +1629,7 @@ button, .button {
   border-style: solid;
   border-width: 0;
   cursor: pointer;
-  font-family: 'Bad Script', cursive;
+  font-family: 'Pompiere', cursive;
   font-weight: normal;
   line-height: normal;
   margin: 0 0 1.25rem;
@@ -2865,7 +2865,7 @@ select {
   border-color: #cccccc;
   padding: 0.5rem;
   font-size: 0.875rem;
-  font-family: 'Bad Script', cursive;
+  font-family: 'Pompiere', cursive;
   color: rgba(0, 0, 0, 0.75);
   line-height: normal;
   border-radius: 0;
@@ -3310,7 +3310,7 @@ label.error {
 
 .label {
   font-weight: normal;
-  font-family: 'Bad Script', cursive;
+  font-family: 'Pompiere', cursive;
   text-align: center;
   text-decoration: none;
   line-height: 1;
@@ -3692,7 +3692,7 @@ ul.pagination {
     color: #EEEEEE;
     font-weight: normal;
     font-size: 1rem;
-    font-family: 'Bad Script', cursive; }
+    font-family: 'Pompiere', cursive; }
   .pricing-table .price {
     background-color: #F6F6F6;
     padding: 0.9375rem 1.25rem;
@@ -3700,7 +3700,7 @@ ul.pagination {
     color: #333333;
     font-weight: normal;
     font-size: 2rem;
-    font-family: 'Bad Script', cursive; }
+    font-family: 'Pompiere', cursive; }
   .pricing-table .description {
     background-color: #FFFFFF;
     padding: 0.9375rem;
@@ -3949,7 +3949,7 @@ ul.pagination {
   padding: 0.875rem 0;
   list-style-type: none;
   list-style-position: outside;
-  font-family: 'Bad Script', cursive; }
+  font-family: 'Pompiere', cursive; }
   .side-nav li {
     margin: 0 0 0.4375rem 0;
     font-size: 0.875rem;
@@ -3965,7 +3965,7 @@ ul.pagination {
     .side-nav li.active > a:first-child:not(.button) {
       color: #546ab9;
       font-weight: normal;
-      font-family: 'Bad Script', cursive; }
+      font-family: 'Pompiere', cursive; }
     .side-nav li.divider {
       border-top: 1px solid;
       height: 0;
@@ -4083,7 +4083,7 @@ ul.pagination {
     float: left;
     margin-left: 1rem;
     margin-bottom: 0;
-    font-family: 'Bad Script', cursive;
+    font-family: 'Pompiere', cursive;
     font-weight: normal;
     font-size: 0.875rem;
     color: #999999; }
@@ -4255,7 +4255,7 @@ table {
       background-color: #EFEFEF;
       color: #222222;
       padding: 1rem 2rem;
-      font-family: 'Bad Script', cursive;
+      font-family: 'Pompiere', cursive;
       font-size: 1rem; }
       .tabs dd > a:hover, .tabs .tab-title > a:hover {
         background-color: #e1e1e1; }
@@ -4555,7 +4555,7 @@ meta.foundation-mq-topbar {
       color: #FFFFFF;
       padding: 12px 0 12px 0;
       padding-left: 0.9375rem;
-      font-family: 'Bad Script', cursive;
+      font-family: 'Pompiere', cursive;
       font-size: 0.8125rem;
       font-weight: normal;
       text-transform: none; }
@@ -5043,7 +5043,7 @@ p {
 
 /* Default header styles */
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Pacifico', cursive;
+  font-family: 'Lobster Two', cursive;
   font-weight: normal;
   font-style: normal;
   color: #222222;
@@ -6861,7 +6861,7 @@ body {
   background-size: cover;
   background-attachment: fixed; }
   body p {
-    font-size: 18px; }
+    font-size: 20px; }
 
 h1, h2 {
   margin-bottom: 40px; }
