--- a/public_html/app/themes/comber-wedding/scss/_site_settings.scss
+++ b/public_html/app/themes/comber-wedding/scss/_site_settings.scss
@@ -92,8 +92,8 @@ $rem-base: 16px;
 //$font-family-sans-serif: 'Open Sans', "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 // $font-family-serif: Georgia, Cambria, "Times New Roman", Times, serif;
 // $font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
-$pacifico: 'Pacifico', cursive;
-$badscript: 'Bad Script', cursive;
+$lobster: 'Lobster Two', cursive;
+$pompiere: 'Pompiere', cursive;
 
 // We use these to define default font weights
 // $font-weight-normal: normal;
@@ -130,7 +130,7 @@ $primary-color: #303f76;
 // We use these to control various global styles
 // $body-bg: $white;
 // $body-font-color: $jet;
-$body-font-family: $badscript;
+$body-font-family: $pompiere;
 // $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
 
@@ -200,7 +200,7 @@ $body-font-family: $badscript;
 // $include-html-type-classes: $include-html-classes;
 
 // We use these to control header font styles
-$header-font-family: $pacifico;
+$header-font-family: $lobster;
 //$header-font-weight: 600;
 //$header-font-style: normal;
 //$header-font-color: $jet;
