--- a/public_html/app/themes/comber-wedding/scss/main.scss
+++ b/public_html/app/themes/comber-wedding/scss/main.scss
@@ -4,7 +4,7 @@
 @import "site_settings";
 @import "../components/foundation/scss/foundation.scss";
 @import "foundation-icons.scss";
-@import url(https://fonts.googleapis.com/css?family=Bad+Script|Pacifico);
+@import url(https://fonts.googleapis.com/css?family=Pompiere|Lobster+Two:400,400italic,700);
 
 //Add core site styles in here
 body {
@@ -13,7 +13,7 @@ body {
 	background-size: cover;
 	background-attachment: fixed;
 	p {
-		font-size: 18px;
+		font-size: 20px;
 	}
 }
 h1, h2 {
