Adding proper header image

--- a/public_html/app/themes/comber-wedding/scss/header.scss
+++ b/public_html/app/themes/comber-wedding/scss/header.scss
@@ -90,11 +90,33 @@ ul.main-navigation {
     padding: 0;
     background: none;
     border: none;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
     img {
       width: 100%;
     }
+  }
+}
+.header-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  text-align: center;
+  color: #fff;
+  width: 100%;
+  padding: 50px 0 0;
+  p {
+    color: #fff;
+    &.intro {
+      font-family: $lobster;
+      font-size: 30px;
+    }
+    &.date {
+      margin: 0;
+    }
+  }
+  h1 {
+    color: #fff;
+    margin-top: 0px;
+    margin-bottom: 20px;
   }
 }
