--- a/public_html/app/themes/comber-wedding/css/main.css
+++ b/public_html/app/themes/comber-wedding/css/main.css
@@ -6863,6 +6863,9 @@ body {
   body p {
     font-size: 20px; }
 
+#body-wrapper {
+  padding-top: 20px; }
+
 h1, h2 {
   margin-bottom: 40px; }
   .panel h1, .panel h2 {
@@ -6959,12 +6962,30 @@ ul.main-navigation {
 .intro-image .panel {
   padding: 0;
   background: none;
-  border: none;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none; }
+  border: none; }
   .intro-image .panel img {
     width: 100%; }
+
+.header-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  text-align: center;
+  color: #fff;
+  width: 100%;
+  padding: 50px 0 0; }
+  .header-wrapper p {
+    color: #fff; }
+    .header-wrapper p.intro {
+      font-family: 'Lobster Two', cursive;
+      font-size: 30px; }
+    .header-wrapper p.date {
+      margin: 0; }
+  .header-wrapper h1 {
+    color: #fff;
+    margin-top: 0px;
+    margin-bottom: 20px; }
 
 .rsvp-wrapper {
   position: relative; }
