--- a/public_html/app/themes/comber-wedding/scss/rsvp.scss
+++ b/public_html/app/themes/comber-wedding/scss/rsvp.scss
@@ -24,10 +24,89 @@
     line-height: 40px;
   }
   .guest {
+    @include clearfix;
     clear: both;
+    padding-top: 20px;
+    &:first-child {
+      padding-top: 0px;
+    }
   }
   small {
     font-family: Arial, sans-serif;
     font-size: 10px;
+  }
+  select {
+    font-family: Arial, sans-serif;
+    font-size: 13px;
+  }
+  .guest-name {
+    font-size: 24px;
+    font-weight: 600;
+    margin: 0;
+  }
+  fieldset {
+    display: none;
+    padding: 1.25rem .9375rem 0;
+    margin: 1.125rem .9375rem;
+  }
+  input[type=submit] {
+    margin-top: 20px;
+  }
+}
+
+
+.notes-field {
+  textarea {
+    display: none;
+    font-family: Arial, sans-serif;
+  }
+  .add-note {
+    position: relative;
+    display: block;
+    float: left;
+    padding-left: 45px;
+    line-height: 30px;
+    cursor: pointer;
+    padding-bottom: 20px;
+    &::before {
+      position: absolute;
+      background: #eaeaea;
+      left: 0;
+      top: 0;
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      content: "\f199";
+      font-family: "foundation-icons";
+      font-style: normal;
+      font-weight: normal;
+      font-variant: normal;
+      text-transform: none;
+      -webkit-font-smoothing: antialiased;
+      text-decoration: inherit;
+      text-align: center;
+      font-size: 22px;
+      color: #ccc;
+      transition: all 0.3s linear;
+    }
+    &:hover {
+      &::before {
+        color: #fff;
+        background: $primary-color;
+      }
+    }
+    &.added {
+      &::before {
+        opacity: 0.4;
+        content: "\f176";
+        color: #fff;
+        background: #f04124;
+      }
+    }
+    &:hover {
+      &::before {
+        opacity: 0.7;
+      }
+    }
   }
 }
