--- a/public_html/app/themes/comber-wedding/css/main.css
+++ b/public_html/app/themes/comber-wedding/css/main.css
@@ -6867,9 +6867,9 @@ body {
   padding-top: 20px; }
 
 h1, h2 {
-  margin-bottom: 40px; }
+  margin-bottom: 10px; }
   .panel h1, .panel h2 {
-    margin-bottom: 40px; }
+    margin-bottom: 10px; }
 
 #primary {
   padding-top: 20px; }
@@ -6988,7 +6988,10 @@ ul.main-navigation {
     margin-bottom: 20px; }
 
 .rsvp-wrapper {
-  position: relative; }
+  position: relative;
+  margin-top: 40px; }
+  .rsvp-wrapper h2 {
+    padding-bottom: 10px; }
 
 .menu-modal {
   position: absolute;
@@ -7000,6 +7003,11 @@ ul.main-navigation {
 
 #myMenu h6 {
   font-size: 1.2rem; }
+
+.guests .button {
+  padding: 0 60px;
+  line-height: 40px;
+  margin-top: 20px; }
 
 #rsvp-guests .button {
   padding: 0 60px;
@@ -7020,16 +7028,21 @@ ul.main-navigation {
 #rsvp-guests select {
   font-family: Arial, sans-serif;
   font-size: 13px; }
-#rsvp-guests .guest-name {
-  font-size: 24px;
-  font-weight: 600;
-  margin: 0; }
 #rsvp-guests fieldset {
   display: none;
   padding: 1.25rem .9375rem 0;
   margin: 1.125rem .9375rem; }
 #rsvp-guests input[type=submit] {
   margin-top: 20px; }
+
+.guest-name {
+  font-size: 24px;
+  font-weight: 600;
+  margin: 0; }
+  .guest-name span {
+    font-weight: 400; }
+  .rsvp-summary .guest-name {
+    padding-bottom: 5px; }
 
 .notes-field textarea {
   display: none;
@@ -7072,3 +7085,10 @@ ul.main-navigation {
     background: #f04124; }
   .notes-field .add-note:hover::before {
     opacity: 0.7; }
+
+.rsvp-summary .panel {
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  padding: 10px;
+  background: #eaeaea; }
