--- a/public_html/app/themes/comber-wedding/scss/rsvp.scss
+++ b/public_html/app/themes/comber-wedding/scss/rsvp.scss
@@ -2,6 +2,10 @@
 
 .rsvp-wrapper {
   position: relative;
+  margin-top: 40px;
+  h2 {
+    padding-bottom: 10px;
+  }
 }
 .menu-modal {
   position: absolute;
@@ -16,6 +20,11 @@
   h6 {
     font-size: 1.2rem;
   }
+}
+.guests .button {
+  padding: 0 60px;
+  line-height: 40px;
+  margin-top: 20px;
 }
 
 #rsvp-guests {
@@ -39,11 +48,6 @@
     font-family: Arial, sans-serif;
     font-size: 13px;
   }
-  .guest-name {
-    font-size: 24px;
-    font-weight: 600;
-    margin: 0;
-  }
   fieldset {
     display: none;
     padding: 1.25rem .9375rem 0;
@@ -51,6 +55,17 @@
   }
   input[type=submit] {
     margin-top: 20px;
+  }
+}
+.guest-name {
+  font-size: 24px;
+  font-weight: 600;
+  margin: 0;
+  span {
+    font-weight: 400;
+  }
+  .rsvp-summary & {
+    padding-bottom: 5px;
   }
 }
 
@@ -108,5 +123,14 @@
         opacity: 0.7;
       }
     }
+  }
+}
+.rsvp-summary {
+  .panel {
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    padding: 10px;
+    background: #eaeaea;
   }
 }
