--- a/public_html/app/themes/comber-wedding/scss/main.scss
+++ b/public_html/app/themes/comber-wedding/scss/main.scss
@@ -97,3 +97,15 @@ ul.accordion {
 
 @import 'header';
 @import 'rsvp';
+
+#sidebar-images {
+	img {
+		padding-bottom: 25px;
+	}
+}
+.panel {
+	margin-bottom: 30px;
+}
+ul li {
+	font-size: 20px;
+}
