Adding a request song function

--- a/public_html/app/themes/comber-wedding/css/main.css
+++ b/public_html/app/themes/comber-wedding/css/main.css
@@ -7093,6 +7093,88 @@ ul.main-navigation {
   padding: 10px;
   background: #eaeaea; }
 
+.add-new-row {
+  position: relative;
+  display: block;
+  float: left;
+  padding-left: 45px;
+  line-height: 30px;
+  cursor: pointer;
+  padding-bottom: 20px; }
+  .add-new-row::before {
+    position: absolute;
+    background: #eaeaea;
+    left: 0;
+    top: 0;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    content: "\f199";
+    font-family: "foundation-icons";
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    -webkit-font-smoothing: antialiased;
+    text-decoration: inherit;
+    text-align: center;
+    font-size: 22px;
+    color: #ccc;
+    transition: all 0.3s linear; }
+  .add-new-row:hover::before {
+    color: #fff;
+    background: #303f76; }
+
+.form-field-insert .row {
+  position: relative; }
+  .form-field-insert .row .column:last-of-type {
+    padding-right: 60px;
+    padding-left: 0; }
+  .form-field-insert .row .remove-row {
+    position: absolute;
+    display: block;
+    width: 37px;
+    height: 37px;
+    line-height: 37px;
+    right: 15px;
+    cursor: pointer;
+    top: 0px; }
+    .form-field-insert .row .remove-row::before {
+      position: absolute;
+      background: #eaeaea;
+      cursor: pointer;
+      left: 0;
+      top: 0;
+      width: 37px;
+      height: 37px;
+      border-radius: 50%;
+      content: "\f176";
+      font-family: "foundation-icons";
+      font-style: normal;
+      font-weight: normal;
+      font-variant: normal;
+      text-transform: none;
+      -webkit-font-smoothing: antialiased;
+      text-decoration: inherit;
+      text-align: center;
+      font-size: 22px;
+      color: #ccc;
+      transition: all 0.3s linear; }
+    .form-field-insert .row .remove-row:hover::before {
+      color: #fff;
+      background: #f04124; }
+  .form-field-insert .row:first-of-type .remove-row {
+    display: none; }
+
+.music-wrapper input.button {
+  clear: both;
+  float: left; }
+.music-wrapper:before, .music-wrapper:after {
+  content: " ";
+  display: table; }
+.music-wrapper:after {
+  clear: both; }
+
 #sidebar-images img {
   padding-bottom: 25px; }
 
