--- a/public_html/app/themes/comber-wedding/css/main.css
+++ b/public_html/app/themes/comber-wedding/css/main.css
@@ -4255,15 +4255,15 @@ table {
       background-color: #EFEFEF;
       color: #222222;
       padding: 1rem 2rem;
-      font-family: 'Pompiere', cursive;
-      font-size: 1rem; }
+      font-family: 'Lobster Two', cursive;
+      font-size: 1.25rem; }
       .tabs dd > a:hover, .tabs .tab-title > a:hover {
         background-color: #e1e1e1; }
       .tabs dd > a:focus, .tabs .tab-title > a:focus {
         outline: none; }
     .tabs dd.active a, .tabs .tab-title.active a {
-      background-color: #FFFFFF;
-      color: #222222; }
+      background-color: #303f76;
+      color: #fff; }
   .tabs.radius dd:first-child a, .tabs.radius .tab:first-child a {
     -webkit-border-bottom-left-radius: 3px;
     -webkit-border-top-left-radius: 3px;
@@ -6947,17 +6947,21 @@ ul.main-navigation {
   ul.main-navigation li.menu-item-23:hover a, ul.main-navigation li.menu-item-23.current-menu-item a {
     background-image: url(../images/music-hov.png); }
   ul.main-navigation li.menu-item-25 a {
-    background-image: url(../images/rsvp.png); }
+    background-image: url(../images/rsvp-new.png); }
   ul.main-navigation li.menu-item-25:hover a, ul.main-navigation li.menu-item-25.current-menu-item a {
-    background-image: url(../images/rsvp-hov.png); }
+    background-image: url(../images/rsvp-new-hov.png); }
   ul.main-navigation li.menu-item-13 a {
-    background-image: url(../images/accom.png); }
+    background-image: url(../images/rsvp.png); }
   ul.main-navigation li.menu-item-13:hover a, ul.main-navigation li.menu-item-13.current-menu-item a {
-    background-image: url(../images/accom-hov.png); }
+    background-image: url(../images/rsvp-hov.png); }
   ul.main-navigation li.menu-item-14 a {
     background-image: url(../images/home.png); }
   ul.main-navigation li.menu-item-14:hover a, ul.main-navigation li.menu-item-14.current-menu-item a {
     background-image: url(../images/home-hov.png); }
+  ul.main-navigation li.logout a {
+    background-image: url(../images/logout.png); }
+  ul.main-navigation li.logout:hover a {
+    background-image: url(../images/logout-hov.png); }
 
 .intro-image .panel {
   padding: 0;
@@ -7174,6 +7178,11 @@ ul.main-navigation {
   display: table; }
 .music-wrapper:after {
   clear: both; }
+.music-wrapper form small.error {
+  font-family: Arial,sans-serif;
+  font-size: 10px; }
+.music-wrapper form input[type=text] {
+  font-family: Arial,sans-serif; }
 
 .request-feed {
   padding-top: 20px; }
@@ -7384,9 +7393,9 @@ ul.main-navigation {
   box-sizing: border-box; }
 
 .dropzone {
-  min-height: 150px;
+  min-height: 500px;
   border: 2px solid rgba(0, 0, 0, 0.3);
-  background: white;
+  background: rgba(255, 255, 255, 0.8);
   padding: 20px 20px; }
   .dropzone.dz-clickable {
     cursor: pointer; }
@@ -7596,6 +7605,22 @@ ul.main-navigation {
         border-left: 6px solid transparent;
         border-right: 6px solid transparent;
         border-bottom: 6px solid #be2626; }
+
+#myGallery {
+  background: rgba(0, 0, 0, 0.6);
+  padding: 10px; }
+
+.reveal-modal .close-reveal-modal {
+  border-radius: 50%;
+  background: #303f76;
+  width: 40px;
+  text-align: center;
+  right: -10px;
+  top: -10px;
+  padding: 0;
+  height: 40px;
+  line-height: 33px;
+  color: #fff; }
 
 #sidebar-images img {
   padding-bottom: 25px; }
