--- a/public_html/app/themes/comber-wedding/scss/_site_settings.scss
+++ b/public_html/app/themes/comber-wedding/scss/_site_settings.scss
@@ -1322,12 +1322,12 @@ $header-font-family: $lobster;
 
 // $tabs-navigation-padding: rem-calc(16);
 // $tabs-navigation-bg-color: $silver;
-//$tabs-navigation-active-bg-color: $primary-color;
+$tabs-navigation-active-bg-color: $primary-color;
 // $tabs-navigation-hover-bg-color: scale-color($tabs-navigation-bg-color, $lightness: -6%);
 // $tabs-navigation-font-color: $jet;
-//$tabs-navigation-active-font-color: #fff;
-// $tabs-navigation-font-size: rem-calc(16);
-// $tabs-navigation-font-family: $body-font-family;
+$tabs-navigation-active-font-color: #fff;
+$tabs-navigation-font-size: rem-calc(20);
+$tabs-navigation-font-family: $lobster;
 
 // $tabs-content-margin-bottom: rem-calc(24);
 // $tabs-content-padding: ($column-gutter/2);
