--- a/public_html/app/themes/comber-wedding/scss/dropzone.scss
+++ b/public_html/app/themes/comber-wedding/scss/dropzone.scss
@@ -113,9 +113,9 @@
     }
   }
 
-  min-height: 150px;
+  min-height: 500px;
   border: 2px solid rgba(0, 0, 0, 0.3);
-  background: white;
+  background: rgba(255,255,255,0.8);
   padding: 20px 20px;
 
   &.dz-started {
