Finalising responsive and send action in prep for invites

--- a/public_html/app/themes/comber-wedding/css/main.css
+++ b/public_html/app/themes/comber-wedding/css/main.css
@@ -6991,6 +6991,12 @@ ul.main-navigation {
     margin-top: 0px;
     margin-bottom: 20px; }
 
+#menuTrigger {
+  display: none; }
+
+#menu-wrapper {
+  float: right; }
+
 @media only screen and (max-width: 930px) {
   ul.main-navigation {
     margin-left: 20px; }
@@ -7021,6 +7027,10 @@ ul.main-navigation {
     -moz-box-shadow: none;
     box-shadow: none; } }
 
+@media only screen and (min-width: 642px) {
+  #navigation {
+    display: block !important; } }
+
 @media only screen and (max-width: 641px) {
   ul.main-navigation {
     margin-left: 40px; }
@@ -7030,7 +7040,53 @@ ul.main-navigation {
   #sidebar-images img {
     padding-bottom: 25px;
     margin: 0 auto;
-    display: block; } }
+    display: block; }
+  #navigation {
+    display: none; }
+  #menu-wrapper .panel {
+    padding: 0;
+    transition: all 0.3s linear; }
+  #menu-wrapper.active .panel {
+    padding: 20px; }
+  #menuTrigger {
+    display: block;
+    position: relative;
+    padding-left: 50px;
+    height: 40px;
+    font-size: 18px;
+    margin-left: 0px;
+    margin-right: 0px;
+    cursor: pointer;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+    border-bottom: 0px solid #eaeaea;
+    line-height: 40px;
+    transition: all 0.3s linear; }
+    #menuTrigger.active {
+      padding-bottom: 20px;
+      margin-bottom: 20px;
+      border-bottom: 1px solid #eaeaea;
+      height: 60px;
+      margin-left: 40px;
+      margin-right: 40px; }
+    #menuTrigger::after {
+      content: '\f169';
+      font-family: 'foundation-icons';
+      font-style: normal;
+      font-weight: normal;
+      font-variant: normal;
+      text-transform: none;
+      -webkit-font-smoothing: antialiased;
+      text-decoration: inherit;
+      position: absolute;
+      background: #303f76;
+      top: 0;
+      left: 0;
+      width: 40px;
+      height: 40px;
+      line-height: 40px;
+      color: #fff;
+      text-align: center; } }
 
 @media only screen and (max-width: 560px) {
   #masthead .intro-image .panel {
@@ -7045,6 +7101,13 @@ ul.main-navigation {
       left: 50%;
       max-width: none;
       margin-left: -280px; } }
+
+@media only screen and (max-width: 400px) {
+  ul.main-navigation {
+    margin-left: 20px; }
+  #menuTrigger.active {
+    margin-left: 20px;
+    margin-right: 20px; } }
 
 .rsvp-wrapper {
   position: relative;
