Adding final bits for invite send

--- a/public_html/app/themes/comber-wedding/css/main.css
+++ b/public_html/app/themes/comber-wedding/css/main.css
@@ -7740,6 +7740,11 @@ ul.main-navigation {
   line-height: 33px;
   color: #fff; }
 
+@media only screen and (max-width: 641px) {
+  .reveal-modal .close-reveal-modal {
+    right: 0;
+    top: 0; } }
+
 #sidebar-images img {
   padding-bottom: 25px; }
 
