--- a/public_html/app/themes/comber-wedding/scss/gallery.scss
+++ b/public_html/app/themes/comber-wedding/scss/gallery.scss
@@ -22,3 +22,31 @@
     top: 0;
   }
 }
+
+.gallery-image {
+  position: relative;
+  padding-bottom: 45px;
+  a {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 5;
+  }
+}
+
+.gall-thumb-inner {
+  padding-bottom: 100%;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  p.title {
+    position: absolute;
+    bottom: -30px;
+    left: 0;
+    margin: 0;
+    width: 100%;
+  }
+}
