adding the main image gallery output

--- a/public_html/app/themes/comber-wedding/scss/gallery.scss
+++ b/public_html/app/themes/comber-wedding/scss/gallery.scss
@@ -111,4 +111,11 @@
       }
     }
   }
+  &.inner-gallery-lightbox {
+    .gall-thumb-inner {
+      &:before {
+        content: 'Enlarge/Download Image';
+      }
+    }
+  }
 }
